--- a/ukraine-city-guide/requirements.txt
+++ b/ukraine-city-guide/requirements.txt
@@ -1,9 +1,88 @@
-customtkinter==5.2.1
-rdflib==7.0.0
-requests==2.31.0
+﻿black==24.10.0
+branca==0.8.0
+build==1.2.2.post1
+CacheControl==0.14.1
+certifi==2024.8.30
+charset-normalizer==3.4.0
+cleo==2.1.0
+click==8.1.7
+colorama==0.4.6
+contourpy==1.3.1
+coverage==7.6.7
+crashtest==0.4.1
+customtkinter==5.2.2
+cycler==0.12.1
+darkdetect==0.8.0
+decorator==5.1.1
+distlib==0.3.9
+dulwich==0.21.7
+fastjsonschema==2.20.0
+filelock==3.16.1
 folium==0.15.0
+fonttools==4.55.0
+future==1.0.0
+geocoder==1.38.1
+graphviz==0.20.3
+greenlet==3.1.1
+html5lib-modern==1.2
+idna==3.10
+iniconfig==2.0.0
+installer==0.7.0
+isodate==0.6.1
+jaraco.classes==3.4.0
+Jinja2==3.1.4
+keyring==24.3.1
+kiwisolver==1.4.7
+MarkupSafe==3.0.2
+matplotlib==3.9.2
+more-itertools==10.5.0
+msgpack==1.1.0
+mypy-extensions==1.0.0
+numpy==2.1.3
+packaging==24.2
+pandas==2.2.3
+pathspec==0.12.1
+pexpect==4.9.0
+pillow==11.0.0
+pkginfo==1.11.2
+platformdirs==4.3.6
+pluggy==1.5.0
+poetry==1.8.4
+poetry-core==1.9.1
+poetry-plugin-export==1.8.0
+psutil==6.1.0
+ptyprocess==0.7.0
+pyparsing==3.2.0
+pyperclip==1.9.0
+pyproject_hooks==1.2.0
+PyQt6==6.6.1
+PyQt6-Qt6==6.7.3
+PyQt6-WebEngine==6.6.0
+PyQt6-WebEngine-Qt6==6.7.3
+PyQt6-WebEngineSubwheel-Qt6==6.7.3
+PyQt6_sip==13.6.0
 pytest==7.4.3
 pytest-cov==4.1.0
-tkinterweb==3.24.7
-SPARQLWrapper==2.0.0
+python-dateutil==2.9.0.post0
+pytz==2024.2
+pywin32==308
+pywin32-ctypes==0.2.3
+RapidFuzz==3.10.1
+ratelim==0.1.6
+rdflib==7.0.0
 requests==2.31.0
+requests-toolbelt==1.0.0
+shellingham==1.5.4
+six==1.16.0
+SPARQLWrapper==2.0.0
+SQLAlchemy==2.0.23
+tkintermapview==1.29
+tkinterweb==3.24.7
+tomlkit==0.13.2
+trove-classifiers==2024.10.21.16
+typing_extensions==4.12.2
+tzdata==2024.2
+# Editable install with no version control (ukraine-city-guide==0.1)
+-e c:\users\ilyag\onedrive\desktop\ukraine-city-guide
+urllib3==2.2.3
+virtualenv==20.27.1
