--- a/ukraine-city-guide/.gitignore
+++ b/ukraine-city-guide/.gitignore
@@ -1,4 +1,36 @@
+# Compiled python modules
+__pycache__/
+*.py[cod]
+
+# Egg files
+*.egg
+*.egg-info/
+
+# Distribution / packaging
+.Python
+build/
+dist/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Unit test / coverage reports
 htmlcov/
-logs/
-*.log
+.tox/
 .coverage
+.coverage.*
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+.hypothesis/
+.pytest_cache/
